<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/about_bg"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp">

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#C4FFFFFF"
        android:text="@string/project_credit"
        android:textSize="18sp"/>

    <ImageButton
        android:id="@+id/emailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="?android:selectableItemBackground"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:srcCompat="@drawable/email"
        android:layout_marginBottom="18dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/content_description_email_button"/>

    <ImageButton
        android:id="@+id/phoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="?android:selectableItemBackground"
        android:padding="0dp"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:srcCompat="@drawable/phone"
        android:layout_alignTop="@+id/emailButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/content_description_phone_button"/>

    <ImageButton
        android:id="@+id/closeAboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:padding="0dp"
        app:srcCompat="@drawable/close"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/content_description_about_close"/>
</RelativeLayout>
