<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
    >

    <ImageView
        android:id="@+id/seriesItemThumbnail"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/loading_placeholder"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:contentDescription="@string/content_description_series_item_thumbnail_placeholder"/>

    <TextView
        android:id="@+id/seriesItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seriesItemType"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/seriesItemThumbnail"
        android:layout_toRightOf="@+id/seriesItemThumbnail"
        android:text="@string/series_item_name_placeholder"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/seriesItemType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seriesItemTitle"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/seriesItemTitle"
        android:text="@string/series_item_type_placeholder"
        android:textSize="16sp"/>

</RelativeLayout>